// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component should render custom colours 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
        style="background: grey; color: red;"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-13"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-14"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
      style="background: grey; color: red;"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-13"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-14"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with default colours 1`] = `[Function]`;

exports[`Accordion component should render with grey background 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
        style="background: grey;"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-3"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-4"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
      style="background: grey;"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-3"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-4"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with red background and yellow text in the description pop up 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-11"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-12"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-11"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-12"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with red background in the description pop up 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-7"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-8"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-7"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-8"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with red font 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
        style="color: red;"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-1"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-2"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
      style="color: red;"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-1"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-2"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with red font on grey background 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
        style="background: grey; color: red;"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-5"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-6"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
      style="background: grey; color: red;"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-5"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-6"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion component should render with yellow text in the description pop up 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion-container"
      >
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a>
                  First Top
                </a>
              </p>
              <div
                aria-describedby="popup-9"
                class="accordian-button"
              >
                🛈
              </div>
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Second Top
                </a>
              </p>
              <div />
              <div
                class="accordian-button"
              >
                ▼
              </div>
            </div>
            <div />
          </div>
        </div>
        <div>
          <div>
            <div
              class="accordion-item-container"
            >
              <p
                class="accordion-dropdown-text"
              >
                <a
                  href="https://www.bbc.co.uk/news"
                >
                  Third Top
                </a>
              </p>
              <div
                aria-describedby="popup-10"
                class="accordian-button"
              >
                🛈
              </div>
              <div />
            </div>
            <div />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion-container"
    >
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a>
                First Top
              </a>
            </p>
            <div
              aria-describedby="popup-9"
              class="accordian-button"
            >
              🛈
            </div>
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Second Top
              </a>
            </p>
            <div />
            <div
              class="accordian-button"
            >
              ▼
            </div>
          </div>
          <div />
        </div>
      </div>
      <div>
        <div>
          <div
            class="accordion-item-container"
          >
            <p
              class="accordion-dropdown-text"
            >
              <a
                href="https://www.bbc.co.uk/news"
              >
                Third Top
              </a>
            </p>
            <div
              aria-describedby="popup-10"
              class="accordian-button"
            >
              🛈
            </div>
            <div />
          </div>
          <div />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
